# Python-Project-Digital-Taximeter

./: .coverage  README.md  digital_taximeter.py  main.py  pyproject.toml
digital_taximeter/: history.py  taximeter.py  trip.py
tests/: test_history.py  test_taximeter.py  test_trip.py
