[project]
name = "digital-taximeter"
version = "0.1.0"
description = "This project involves developing a digital taximeter prototype using Python."
authors = [
    {name = "Camila",email = "milarodcar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black (>=25.1.0,<26.0.0)",
    "coverage (>=7.6.10,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
